--- a/src/styles/item_list.css
+++ b/src/styles/item_list.css
@@ -2,4 +2,10 @@
     display: flex;
   justify-content: space-evenly;
   border-bottom: 0.01px solid rgb(204, 201, 201);
+  height: 350px;
+  background-color: white;
+}
+.ecs{
+  height: 370px;
+  background-color: whitesmoke;
 }
