--- a/src/styles/summer.css
+++ b/src/styles/summer.css
@@ -1,4 +1,10 @@
 .summer_item{
     display: flex;
     border-bottom: 0.01px solid rgb(204, 201, 201);
+    height: 350px;
+    background-color: white;
+}
+.summer{
+   height: 365px;
+   background-color: whitesmoke;
 }
